Register process refined

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI='mongodb+srv://kalleriit:rw6QY5AE2U9z4MMc@cluster0.7zn6yo7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI="mongodb+srv://kalleriit:rw6QY5AE2U9z4MMc@cluster0.7zn6yo7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
