--- a/backend/package.json
+++ b/backend/package.json
@@ -22,10 +22,13 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express-session": "^1.18.0",
-    "mongoose": "^8.3.2"
+    "mongoose": "^8.3.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
