Sends image to backend and backend saves it locally

--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,4 @@
 CLOUDINARY_CLOUD_NAME="dlexia9yf"
+CLOUDINARY_UPLOAD_PRESET="mregh7s1"
 CLOUDINARY_API_KEY="879154183848993"
 CLOUDINARY_SECRET_KEY="OHQCqhWNnCS4IIuuEHA9qJ5Zo2E"
