Image upload to cloudinary with unique folders

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 MONGO_URI="mongodb+srv://kalleriit:rw6QY5AE2U9z4MMc@cluster0.7zn6yo7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 CLOUDINARY_CLOUD_NAME="dlexia9yf"
 CLOUDINARY_API_KEY="879154183848993"
-CLOUDINARY_SECRET_KEY="OHQCqhWNnCS4IIuuEHA9qJ5Zo2E"
+CLOUDINARY_API_SECRET="OHQCqhWNnCS4IIuuEHA9qJ5Zo2E"
+CLOUDINARY_UPLOAD_PRESET="mregh7s1"
