--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "cloudinary-react": "^1.8.1",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
